# UNDERDOG

./: .gitignore  DEMO_STATUS.md  ESTADO_ACTUAL.md  FIREWALL_AUDIT_INDEX.md  FIREWALL_SETUP_COMPLETE.md  GRAFANA_DASHBOARDS_FIX.md  README.md  README_NEW.md  ROADMAP_PRODUCTION.md  pyproject.toml  pytest.ini  test_td3_agent.pth
config/: agent_configs.py  data_providers.yaml
config/runtime/env/: mt5_credentials.yaml
config/strategies/: fuzzy_confidence_rules.yaml
data/models/: regime_gmm.pkl
data/models/drl_checkpoints/: .gitkeep
data/models/sentiment_models/: .gitkeep
data/test_results/: summary_ATRBreakout_20251021_175731.txt  summary_ATRBreakout_20251021_180622.txt
docker/: .dockerignore  .env  .env.template  Dockerfile  docker-compose.yml  grafana-datasources.yml  init-db.sql  init-indicators-db.sql  prometheus.yml
docker/grafana-dashboards/: dashboards.yml  ea-performance-matrix.json  open-positions.json  portfolio-overview.json
docs/: ARCHITECTURE_REFACTOR.md  ARCHITECTURE_VISUAL.md  AUDIT_CLEANUP_2025_10_22.md  AUDIT_REPORT_2025_10_23.md  BACKTEST_QUICK_START.md  BOOK_RECOMMENDATIONS_COMPLIANCE.md  CLEANUP_PENDING_TASKS.md  CMDP_BUG_FIXES.md  CONSULTANT_RECOMMENDATIONS_MTF_MARL.md  CPP_OPTIMIZATION_ANALYSIS.md  CRITICAL_DECISION_NOW.md  DATA_LAYER_ANALYSIS.md  DOCKER_DEPLOYMENT.md  DRL_ARCHITECTURE.md  EA_IMPLEMENTATION_ROADMAP.md  ESTADO_ACTUAL.md  EXECUTION_GUIDE.md  EXECUTIVE_SUMMARY_ARCHITECTURE_PIVOT.md  EXECUTIVE_SUMMARY_PHASE4.md  EXECUTIVE_SUMMARY_SCIENTIFIC_ANALYSIS.md  FEATURE_STORE_ARCHITECTURE.md  FINANCIAL_INTELLIGENCE_COMPLETE.md  FRAMEWORK_DECISION.md  FRAMEWORK_EVALUATION.md  HISTDATA_COMPLETE_DOWNLOAD.md  HMARL_BLOCKERS_RESOLVED.md  HMARL_MIGRATION_STATUS.md  HUGGINGFACE_SETUP.md  IMPLEMENTATION_SCIENTIFIC_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_UI_ARCHITECTURE.md  MARL_IMPLEMENTATION_COMPLETE.md  ML_PREPROCESSING_VISUAL_GUIDE.md  MONITORING_GUIDE.md  MQL5_TO_PYTHON_MIGRATION_GUIDE.md  MT5_JSONAPI_SETUP.md  MT5_LIVE_TRADING_GUIDE.md  MT5_QUICK_REFERENCE.md  MTF_MARL_ARCHITECTURE.md  MTF_MARL_EXECUTIVE_SUMMARY.md  (+41 more)
docs/setup/: CHECKLIST_STARTUP.md  DEMO_GUIDE.md
docs/troubleshooting/: FIREWALL_AUDIT.md  FIREWALL_AUDIT_FINAL_SUMMARY.md  FIREWALL_AUDIT_SUMMARY.md  SOLUCION_MANUAL.md
examples/: poel_complete_example.py  poel_integration_example.py
scripts/: analyze_poel_comparison.py  backfill_all_data.py  backfill_fred_macro.py  backfill_histdata_parquet.py  calculate_historical_features.py  cleanup_project.ps1  compare_baselines.py  complete_trading_workflow.py  demo_paper_trading.py  desc.py  diagnose_zmq_connection.py  download_all_histdata.py  download_histdata_1min_only.py  download_histdata_historical.py  download_indices.py  download_liquid_pairs.py  download_mt5_historical.py  explore_hf_forex_datasets.py  generate_synthetic_data.py  generate_test_metrics.py  insert_indicators_to_db.py  instrument_eas_prometheus.py  integrated_trading_system.py  integration_test.py  ml_preprocessing_example.py  monitoring_example.py  quick_compare.py  resample_and_calculate.py  retrain_models.py  setup_db_simple.ps1  setup_feature_store.ps1  setup_firewall_rules.ps1  setup_hf_token.py  setup_indicators_db.ps1  start_backtest.py  start_live.py  start_metrics.ps1  start_trading_with_monitoring.py  streamlit_dashboard.py  test_backtrader.py  (+34 more)
scripts/tests/: __init__.py  test_backtesting.py  test_core.py  test_regime_classifier.py  test_strategies.py
tests/: conftest.py  test_feature_engineering.py  test_fuzzy_logic.py  test_position_sizing.py  test_risk_master.py  test_schemas.py
tests/ml/: test_preprocessing.py
underdog/backtesting/: bt_adapter.py  bt_engine.py  simple_runner.py
underdog/backtesting/engines/: event_driven.py
underdog/backtesting/validation/: monte_carlo.py  wfo.py
underdog/bridges/: __init__.py  bt_to_mt5.py
underdog/core/: abstractions.py
underdog/core/comms_bus/: async_queues.py  zeromq_publisher.py  zeromq_subscriber.py
underdog/core/connectors/: mt5_connector.py  test.py  test1.py  trading_bot_example.py
underdog/core/data_handlers/: ohlcv_processor.py  timeseries_analysis.py
underdog/core/schemas/: account_info.py  market_data.py  order_types.py  (+1 more)
underdog/data/: __init__.py  dukascopy_loader.py  fred_collector.py  hf_loader.py  mt5_historical_loader.py  reddit_collector.py  simple_dukascopy.py
underdog/database/: data_store.py  db_loader.py  duckdb_store.py  histdata_ingestion.py  ingestion_pipeline.py  news_scraping.py  redis_cache.py
underdog/execution/: __init__.py  fault_tolerant_executor.py  mt5_executor.py  order_manager.py  retry_logic.py
underdog/ml/: __init__.py  feature_engineering.py  preprocessing.py
underdog/monitoring/: __init__.py  alerts.py  dashboard.py  health_check.py  metrics.py  prometheus_metrics.py
underdog/risk/: __init__.py  prop_firm_rme.py
underdog/risk_management/: cvar.py  floating_drawdown_monitor.py  position_sizing.py  risk_master.py  rules_engine.py
underdog/rl/: __init__.py  agents.py  cbrl_noise.py  environments.py  meta_agent.py  models.py  multi_agents.py  multi_asset_env.py  observation_buffer.py
underdog/sentiment/: __init__.py  llm_connector.py
underdog/strategies/: base_ea.py  base_strategy.py  ea_atr_breakout_v4.py  ea_bollinger_cci_v4.py  ea_ema_scalper_v4.py  ea_keltner_breakout_v4.py  ea_pair_arbitrage_v4.py  ea_parabolic_ema.py  ea_parabolic_ema_v4.py  ea_supertrend_rsi.py  ea_supertrend_rsi_v4.py  strategy_matrix.py
underdog/ui/: streamlit_backtest.py
underdog/utils/: helpers.py
underdog/validation/: __init__.py  monte_carlo.py  wfo.py
(+28 files in other folders)
